{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 15,
  "lineage": "82255f5d-3c1a-9e37-3b2a-87edde49b614",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ba3486a3f606f07",
            "domain": "vpc",
            "id": "eipalloc-09ba3486a3f606f07",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-207-54-19.compute-1.amazonaws.com",
            "public_ip": "52.207.54.19",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastionhost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internetgetaway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202628732415:internet-gateway/igw-0f50b3e9b06137555",
            "id": "igw-0f50b3e9b06137555",
            "owner_id": "202628732415",
            "vpc_id": "vpc-0b6cd0156ff53bdd4"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ba3486a3f606f07",
            "connectivity_type": "public",
            "id": "nat-045bd8b671a577c8e",
            "network_interface_id": "eni-08654a7e958e18722",
            "private_ip": "10.0.1.69",
            "public_ip": "52.207.54.19",
            "subnet_id": "subnet-0ad4cea87662a09bc"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_subnet.publicsubnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202628732415:network-interface/eni-02e1314b5e55f64d2",
            "id": "eni-02e1314b5e55f64d2",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:94:0c:b1:63:f5",
            "owner_id": "202628732415",
            "private_ip": "10.0.1.74",
            "private_ip_list": [
              "10.0.1.74"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.74"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-06a1dd07007887170"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad4cea87662a09bc"
          },
          "dependencies": [
            "aws_subnet.publicsubnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "network2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202628732415:network-interface/eni-069e330a238769215",
            "id": "eni-069e330a238769215",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:60:80:38:2d:4d",
            "owner_id": "202628732415",
            "private_ip": "10.0.2.105",
            "private_ip_list": [
              "10.0.2.105"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.105"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-06a1dd07007887170"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c5fdfa6935862814"
          },
          "dependencies": [
            "aws_subnet.privatesubnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202628732415:route-table/rtb-051d32d1965aaa4db",
            "id": "rtb-051d32d1965aaa4db",
            "owner_id": "202628732415",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-045bd8b671a577c8e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "privateroute"
            },
            "tags_all": {
              "Name": "privateroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6cd0156ff53bdd4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb",
            "aws_nat_gateway.nat1",
            "aws_subnet.publicsubnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202628732415:route-table/rtb-01d816c641fc94705",
            "id": "rtb-01d816c641fc94705",
            "owner_id": "202628732415",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f50b3e9b06137555",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicroute"
            },
            "tags_all": {
              "Name": "publicroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6cd0156ff53bdd4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internetgetaway",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ec09b1477e1df7e",
            "route_table_id": "rtb-051d32d1965aaa4db",
            "subnet_id": "subnet-0c5fdfa6935862814"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_nat_gateway.nat1",
            "aws_route_table.privateroute",
            "aws_subnet.privatesubnet",
            "aws_subnet.publicsubnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0549a569ad2a6617c",
            "route_table_id": "rtb-01d816c641fc94705",
            "subnet_id": "subnet-0ad4cea87662a09bc"
          },
          "dependencies": [
            "aws_internet_gateway.internetgetaway",
            "aws_route_table.publicroute",
            "aws_subnet.publicsubnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202628732415:security-group/sg-01861a60c13cc3780",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01861a60c13cc3780",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "3000",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "202628732415",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b6cd0156ff53bdd4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202628732415:subnet/subnet-0c5fdfa6935862814",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5fdfa6935862814",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202628732415",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privatesubnet"
            },
            "tags_all": {
              "Name": "privatesubnet"
            },
            "vpc_id": "vpc-0b6cd0156ff53bdd4"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202628732415:subnet/subnet-0ad4cea87662a09bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad4cea87662a09bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "202628732415",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicsubnet"
            },
            "tags_all": {
              "Name": "publicsubnet"
            },
            "vpc_id": "vpc-0b6cd0156ff53bdd4"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202628732415:vpc/vpc-0b6cd0156ff53bdd4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ce7cc9ba84ebd164",
            "default_route_table_id": "rtb-0ed690166740a19ae",
            "default_security_group_id": "sg-06a1dd07007887170",
            "dhcp_options_id": "dopt-0174e0f5891d4b1da",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": false,
            "id": "vpc-0b6cd0156ff53bdd4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ed690166740a19ae",
            "owner_id": "202628732415"
          }
        }
      ]
    }
  ]
}